@@ -23,6 +23,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2010-11-10 [O] No longer specify a MySQL engine - use the server default. {Nibbler}
 2010-11-10 [B] Fixed picture manager - show user created albums in public categories (thread ID 67937) {eenemeenemuu}
 2010-11-10 [B] Fixed renaming of already added files during batch-add (thread ID 67993) {eenemeenemuu}
 2010-11-05 [C] Fixed error message when entering invalid email address in profile manager (thread ID 67903) {eenemeenemuu}
